# lotteca-backend

./: .envrc.example  Dockerfile  LICENSE  README.md  pyproject.toml
app/: alembic.ini  main.py  models.py  requirements.txt
app/alembic/versions/: 73c585af37c3_initial.py
app/api/: routes.py
app/bot/: factory.py  repository.py  service.py
app/config/: initializers.py  settings.py
app/database/: db.py
app/database/redis/: list.py  queue.py  redis_model.py
app/operations/: default_operation.py  iqoption.py
app/strategies/: bolinger.py  default_strategy.py
app/tasks/: client.py  default_task.py  task.py
app/threads/: default_thread.py
lotteca-env/: pyvenv.cfg
