[tool.poetry]
name = "lotteca-backend"
version = "0.1.0"
description = ""
authors = ["Andre Urbanski <andre.urbanski@tarmac.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.3.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
